[package]
name = "egone"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.34.2"
egui-wgpu = "0.34.2"
egui-winit = "0.34.2"
half = "2.7.1"
image = "0.25.10"
pollster = "0.4.0"
sysinfo = "0.39.1"
wgpu = "29.0.3"
winit = "0.30.13"


[profile.release]
panic = "abort"
lto = true
